# climkern

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  README.txt  pyproject.toml  setup.py
.github/workflows/: publish-gh-pages  publish-gh-pages.yml  sphinx.yml
ci/: environment.yml
climkern/: __init__.py  __main__.py  download.py  frontend.py  util.py
climkern/.ipynb_checkpoints/: frontend-checkpoint.py
climkern/climkern.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
climkern/tests/: conftest.py  test_frontend.py
docs/source/: climkern.rst  conf.py  index.rst
